# flos_playground

./: README.md  pyproject.toml
notebooks/20240601_causal_inference/: README.md  ate_g_computation.ipynb  ols_test.ipynb  smith_tutorial.ipynb  titanic.ipynb
notebooks/20240602_image_generation_loop/: .env.sample  main.ipynb  openai_test.ipynb
notebooks/20240602_openai_image_generation/: .gitignore  image_loop.ipynb  make_more_austrian.ipynb
notebooks/20240928_test_kedro/mykedrotest/: README.md  pyproject.toml  session_store.db
notebooks/20240928_test_kedro/mykedrotest/docs/source/: conf.py  index.rst
notebooks/20240928_test_kedro/mykedrotest/src/mykedrotest/: __init__.py  __main__.py  settings.py
notebooks/20240928_test_kedro/mykedrotest/tests/: test_run.py
notebooks/20240928_test_kedro/mykedrotest/tests/pipelines/data_science/: test_pipeline.py
notebooks/20240928_test_luigi/: .gitignore  justfile  luigi.cfg  pyproject.toml
notebooks/20240928_test_luigi/test_luigi/: hello.py
notebooks/20240929_test_beam/: justfile  main.py  pyproject.toml
notebooks/20240930_test_metaflow/: .dockerignore  .env.sample  .gitignore  Dockerfile  README.md  config.json  hello.py  hello2.py  justfile  pyproject.toml
